# Software-Architecture-with-Cpp-2E

./: .gitignore  .pre-commit-config.yaml  README.md  default.nix
.github/actions/download-build-dir/: action.yml
.github/actions/prepare-environment/: action.yml
.github/actions/upload-build-dir/: action.yml
.github/workflows/: github-ci.yml  pre-commit.yml
Chapter01/: CMakeLists.txt  README.md
Chapter01/philosophy/time/: good_time.cpp
Chapter01/solid/lsp/: good_substitution.cpp
Chapter01/solid/srp/: bad.cpp  good.cpp
Chapter02/: CMakeLists.txt  README.md
Chapter03/: CMakeLists.txt  README.md  requirements.txt
Chapter03/doc/: conf.py.in
Chapter04/: README.md
Chapter04/canary_releases/: README.md  docker-compose.yaml
Chapter04/retrying_the_call/: README.md
Chapter04/tracing_and_reverse_proxy/: README.md  compose.yaml  docker-compose.yaml  envoy-front_proxy.yaml
Chapter05/: CMakeLists.txt  README.md
Chapter05/src/: 1_base.cpp  2_ranges_part_1.cpp  3_ranges_part_2.cpp  5_concepts.cpp  7_monadic_expected.cpp  7_monadic_optional.cpp
Chapter05/src/6_modules/: main.cpp  store.cppm
Chapter06/: 05_niebloids.cpp  07_static_polymorphism_2.cpp  08_type_erasure.cpp  09_factory_functions.cpp  10_factory_class.cpp  11_builder.cpp  13_memory_arenas.cpp  CMakeLists.txt  README.md
Chapter07/: CMakeLists.txt  README.md  conanfile.txt
Chapter07/cmake/: CPackExternal.cmake.in  CustomerConfig.cmake.in
Chapter07/include/customer/: controller.h  customer.h
Chapter07/src/customer/: CMakeLists.txt  controller.cpp  lib.cpp  main.cpp
Chapter07/test/customer/: unit.cpp
Chapter08/: README.md  _conanfile.txt  conanfile.py
Chapter08/docker/: README.md  compose.yaml
Chapter10/: README.md
Chapter10/customer/: CMakeLists.txt  README.md  conanfile.txt
Chapter10/customer/cmake/: FetchGTest.cmake
Chapter10/customer/include/customer/: controller.h  customer.h  responder.h
Chapter10/customer/src/customer/: CMakeLists.txt  lib.cpp  main.cpp
Chapter10/customer/test/: CMakeLists.txt
Chapter10/customer/test/customer/: CMakeLists.txt  boosttest.cpp  boostuttest.cpp  catch.cpp  compiletime.cpp  cpputest.cpp  doctest.cpp  drogontest.cpp  gmock.cpp  gtest.cpp
Chapter10/mobile_app/: CMakeLists.txt  README.md  conanfile.txt
Chapter10/mobile_app/test/merchants/: CMakeLists.txt  reviewtests_cpputest.cpp  reviewtests_trompeloeil.cpp
Chapter12/: README.md  gitlab-ci.yml
Chapter12/terraform/: main.tf
Chapter13/: README.md  conanfile.txt
Chapter13/customer/: CMakeLists.txt  README.md  conanfile.txt
Chapter13/customer/cmake/: CustomerConfig.cmake.in
Chapter13/customer/include/customer/: controller.h  responder.h  view_controller.h
Chapter13/customer/src/customer/: CMakeLists.txt  main.cpp  responder.cpp  view.csp  view_controller.cpp
Chapter13/customer/src/customer/controllers/: controller.h  inja_controller.h  view_controller.cpp  view_controller.h
Chapter13/mobile_app/: CMakeLists.txt  README.md  conanfile.txt
Chapter13/mobile_app/include/merchants/: visited_merchant_history.h
Chapter14/: CMakeLists.txt  README.md  conanfile.py
Chapter14/coroutines/: CMakeLists.txt  main_1.cpp  main_2.cpp  main_3.cpp
Chapter14/microbenchmarking/benchmark/: CMakeLists.txt  main_1.cpp  main_3.cpp
Chapter14/microbenchmarking/catch2/: CMakeLists.txt  main_1.cpp  main_2.cpp  main_3.cpp  main_4.cpp
Chapter14/microbenchmarking/nanobench/: CMakeLists.txt  main_2.cpp  main_4.cpp
Chapter14/microbenchmarking/nanobench_doctest/: main_1.cpp  main_3.cpp  main_4.cpp
Chapter14/profiling/: main_1.cpp
Chapter17/: README.md
Chapter17/kubernetes/: README.md
Chapter17/minio/: CMakeLists.txt  README.md  conanfile.txt  minio.cpp
Chapter17/packer/: README.md
Chapter17/rest/: asyncapi.yaml  openapi.yaml
Chapter17/s3/: CMakeLists.txt  README.md  conanfile.py  conanfile.txt  s3.cpp
Chapter18/: CMakeLists.txt  README.md  conanfile.txt
Chapter18/redis/: compose-dragonfly.yaml  compose-redis.yaml  compose-valkey.yaml  redis.cpp
Chapter19/: README.md
Chapter19/containers/: .gitignore  README.MD
Chapter19/containers/ansible-bender/: README.md
Chapter19/containers/buildah/: README.md  buildah.sh
Chapter19/containers/docker/: README.md  basic.Dockerfile  compile.Dockerfile  multi-stage.Dockerfile
Chapter19/customer/: README.md  conanfile.txt
Chapter19/customer/src/customer/: CMakeLists.txt  Dockerfile.in
Chapter19/orchestration/: README.md
Chapter20/: CMakeLists.txt  README.md  conanfile.txt
Chapter20/.devcontainer/: Dockerfile  devcontainer.json
Chapter20/docker/: README.md  compose-aspire.yaml  compose-tracelens.yaml
Chapter20/include/customer/: logger.h  metrics.h  responder.h  tracer.h
Chapter20/kubernetes/: README.md  manifest.yaml
Chapter20/src/customer/: CMakeLists.txt  logger.cpp  main.cpp  metrics.cpp  tracer.cpp
docs/: devenv_linux.md  devenv_macos.md  devenv_windows.md
